# subjective-logic

./: Belief Fusion.ipynb  Hyperopinion.py  LICENSE  Mapping.ipynb  Model.ipynb  Model.py  Model2.ipynb  Opinion.ipynb  README.md  Simulations aleatory.ipynb  Simulations.ipynb  [2020-11-06] Examples with Aleatory Cumulative Belief Fusion.ipynb  [2020-11-06] Examples.ipynb  [2020-11-20] Averaging Belief Fusion.ipynb  [2021-12-09].ipynb  [2022-01-20].ipynb  [2022-04-21] New ideas.ipynb  [2022-11-15] Possible bias.ipynb  main.py  pyproject.toml  two-agents.ipynb  workspace.code-workspace
Hyperopinion/: DecisionMaking.py  Hyperopinion.py  HyperopinionDecorator.py  __init__.py
Opinion/: Opinion.py
SubjectiveLogic/: BeliefFusion.py  DecisionMaking.py  Hyperopinion.py  HyperopinionInterface.py  Trust.py  __init__.py
src/subjective_logic/: BeliefFusion.py  DecisionMaking.py  Hyperopinion.py  HyperopinionDecorator.py  Trust.py
